--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,16 +1,34 @@
 .heading{
-    font-size: 30px; text-transform: uppercase;
+    font-size: 30px; 
+    text-transform: uppercase;
 }
-.intro{background-color: bisque;}
+.intro{
+    background-color: rgba(13, 168, 196, 0.87); 
+    float:right ;
+    margin-bottom: 20px;
+}
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color:bisque;
 }
 .contactinfo{
-    font-weight: bold; color:black; background-color: tomato; margin-top: 30px; margin-bottom: 30px;
+    font-weight: bold;
+    color:black;
+    width:fit-content;
+    background-color: tomato;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-style: inset;
+    clear: both;
 }
 .subheading{
-    text-transform: uppercase; border-style: dotted; font-weight: bold; background-color: slateblue; margin: 30px;
+    text-transform: uppercase; 
+    border-style: dotted; 
+    font-weight: bold; 
+    background-color: slateblue; 
+    margin: 30px;
 }
 .icon{
-    margin-left: 30px;
+    margin-left: 30px; 
+    clear: both;
 }
